Cover thumbnail generation. Floating action button added in order to update the current library. List adapter deeply modified. Sugar ORM added!  (Book class) Picasso added! (List adapter image loading and resizing).

--- a/app/src/main/res/layout/activity_epub.xml
+++ b/app/src/main/res/layout/activity_epub.xml
@@ -5,9 +5,6 @@
     android:background="#0099cc"
     tools:context="com.projectclean.lwepubreader.activities.EPUBActivity">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
     <WebView
         android:id="@+id/fullscreen_content"
         android:layout_width="match_parent"
@@ -33,16 +30,45 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:background="@color/black_overlay"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             tools:ignore="UselessParent">
 
-            <Button
-                android:id="@+id/dummy_button"
-                style="?metaButtonBarButtonStyle"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/dummy_button" />
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:src="@drawable/font_size_change"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <SeekBar
+                    android:id="@+id/seekbar_font_change"
+                    android:max="@integer/max_font_size_px"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:src="@drawable/font_size_change"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <SeekBar
+                    android:id="@+id/seekbar_margin_change"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical" />
+
+            </LinearLayout>
 
         </LinearLayout>
     </FrameLayout>
