--- a/app/src/main/res/layout/item_mylibrary_book.xml
+++ b/app/src/main/res/layout/item_mylibrary_book.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:descendantFocusability="blocksDescendants"
+    android:padding="15dp"
     android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/mylibrary_item_cover"
         android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:contentDescription="book cover thumbnail" />
 
     <LinearLayout
         android:layout_weight="3"
@@ -18,12 +22,16 @@
         <TextView
             android:id="@+id/mylibrary_item_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Nothing to show buddy!"
+            android:textSize="20dp" />
 
         <TextView
             android:id="@+id/mylibrary_item_author"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="John Doe"
+            android:textSize="14dp" />
 
     </LinearLayout>
 
