--- a/app/src/main/res/layout/fragment_mylibrary_layout.xml
+++ b/app/src/main/res/layout/fragment_mylibrary_layout.xml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/mylibrary_listview"
-        android:layout_width="match_parent"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.projectclean.lwepubreader.MainActivity">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </ListView>
 
-</LinearLayout>
+        <ListView
+            android:id="@+id/mylibrary_listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ListView>
+    </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:src="@drawable/refresh"
+        android:id="@+id/btn_update_library"
+        android:layout_gravity="bottom|end"
+        android:layout_width="wrap_content"
+        android:layout_margin="@dimen/floating_button_left_bottom_margin"
+        android:layout_height="wrap_content" />
+
+</android.support.design.widget.CoordinatorLayout>
