Pagelist generation and loading successfully implemented. Changed cover generation behaviour (no more WebView renderin under the hood, now it's just a placeholder is no cover.jpeg,jpg or png is found). Landscape mode supported.

--- a/app/src/main/res/layout/activity_epub.xml
+++ b/app/src/main/res/layout/activity_epub.xml
@@ -16,6 +16,19 @@
         android:textSize="50sp"
         android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/page_number_indicator"
+        android:text="x/X"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|bottom"
+        android:textAlignment="center"
+        android:paddingTop="3dp"
+        android:paddingBottom="3dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="#828282" />
+
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
     <FrameLayout
