--- a/app/src/main/res/layout/activity_epub.xml
+++ b/app/src/main/res/layout/activity_epub.xml
@@ -5,7 +5,7 @@
     android:background="#0099cc"
     tools:context="com.projectclean.lwepubreader.activities.EPUBActivity">
 
-    <WebView
+    <com.projectclean.lwepubreader.customviews.CustomWebView
         android:id="@+id/fullscreen_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
