--- a/app/src/main/res/layout/layout_activity_epub.xml
+++ b/app/src/main/res/layout/layout_activity_epub.xml
@@ -34,7 +34,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="false">
+        android:fitsSystemWindows="true">
 
         <LinearLayout
             android:id="@+id/fullscreen_content_controls"
@@ -46,12 +46,6 @@
             android:orientation="vertical"
             tools:ignore="UselessParent"
             android:visibility="gone">
-
-            <Button
-                android:id="@+id/debug_button"
-                android:text="kladjgsajhasgfja"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
 
             <LinearLayout
                 android:layout_width="match_parent"
