--- a/app/src/main/res/menu/action_menu.xml
+++ b/app/src/main/res/menu/action_menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/translate_action_btn"
-        app:showAsAction="always"
         android:title="Translate">
     </item>
     <item
-        android:id="@+id/example_item_2"
+        android:id="@+id/action_share"
+        android:title="Share"
         app:showAsAction="ifRoom"
-        android:title="test2">
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider">
     </item>
 </menu>
