--- a/app/src/main/res/layout/layout_activity_main.xml
+++ b/app/src/main/res/layout/layout_activity_main.xml
@@ -10,9 +10,21 @@
     tools:context="com.projectclean.lwepubreader.MainActivity">
 
     <LinearLayout
-        android:orientation="vertical"
-        android:id="@+id/main_fragment_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:id="@+id/main_fragment_container"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+
+
 
 </RelativeLayout>
