--- a/app/src/main/res/menu/action_menu.xml
+++ b/app/src/main/res/menu/action_menu.xml
@@ -1,13 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:id="@+id/translate_action_btn"
-        android:title="Translate">
-    </item>
-    <item
-        android:id="@+id/action_share"
-        android:title="Share"
-        app:showAsAction="ifRoom"
-        app:actionProviderClass="android.support.v7.widget.ShareActionProvider">
-    </item>
+        android:id="@+id/action_deleteall"
+        android:icon="@drawable/ic_delete_white_48dp"
+        android:title="@string/action_delete_all"
+        app:showAsAction="ifRoom"/>
+
+    <!-- Settings, should always be in the overflow -->
+    <item android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        app:showAsAction="never"/>
+
 </menu>
