--- a/app/src/main/res/menu/action_menu.xml
+++ b/app/src/main/res/menu/action_menu.xml
@@ -8,6 +8,11 @@
         app:showAsAction="ifRoom"/>
 
     <!-- Settings, should always be in the overflow -->
+
+    <item android:id="@+id/action_dropbox"
+        android:title="@string/action_dropbox"
+        app:showAsAction="never"/>
+
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
