--- a/app/src/main/res/layout/item_mylibrary_book.xml
+++ b/app/src/main/res/layout/item_mylibrary_book.xml
@@ -20,40 +20,61 @@
         android:padding="10dp">
 
         <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_gravity="top">
 
-            <TextView
-                android:id="@+id/mylibrary_item_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Nothing to show buddy!"
-                android:textSize="20dp"
-                android:ellipsize="marquee"
-                android:fadingEdge="horizontal"
-                android:lines="1"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:scrollHorizontally="true"
-                android:singleLine="true"/>
+            <LinearLayout
+                android:layout_weight="7"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/mylibrary_item_author"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/mylibrary_item_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Nothing to show buddy!"
+                    android:textSize="20dp"
+                    android:ellipsize="marquee"
+                    android:fadingEdge="horizontal"
+                    android:lines="1"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:scrollHorizontally="true"
+                    android:singleLine="true"
+                    android:textColor="@android:color/black"/>
+
+                <TextView
+                    android:id="@+id/mylibrary_item_author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="John Doe"
+                    android:textSize="14dp"
+                    android:textColor="@color/colorPrimary"/>
+
+            </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/more_button"
+                android:src="@drawable/ic_more_horiz_black_48dp"
+                android:layout_weight="1"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="John Doe"
-                android:textSize="14dp" />
+                android:background="#00ffffff"
+                android:layout_gravity="right"
+                android:scaleType="fitCenter" />
 
         </LinearLayout>
 
         <ProgressBar
-            android:id="@+id/book_completion_progress_bar"
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            style="@android:style/Widget.ProgressBar.Horizontal"
-            android:layout_gravity="bottom" />
+                android:id="@+id/book_completion_progress_bar"
+                android:layout_width="match_parent"
+                android:layout_height="15dp"
+                style="@android:style/Widget.ProgressBar.Horizontal"
+                android:layout_gravity="bottom"
+                android:progressDrawable="@drawable/custom_progress_bar"/>
 
     </FrameLayout>
-
 
 </LinearLayout>
