--- a/app/src/main/res/menu/webview_contextual_action_menu.xml
+++ b/app/src/main/res/menu/webview_contextual_action_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/translate_action_btn"
-        android:title="Translate">
+        android:title="@string/translate_action_button">
     </item>
     <item
         android:id="@+id/action_share"
