--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#212121</color>
+    <color name="colorPrimaryLight">#595959</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF4081</color>
 
@@ -8,4 +9,6 @@
     <color name="skull_white">#EEEEEE</color>
     <color name="secondary_gray">#757575</color>
     <color name="pcg_orange">#FF8900</color>
+    <color name="pcg_orange_bright">#ffad4e</color>
+
 </resources>
