Minor bugfixing. Dropbox validation aw yesh!. Commit to do some tests in my laptop with an x86 official emulator.

--- a/app/src/main/res/layout/layout_activity_main_viewpager.xml
+++ b/app/src/main/res/layout/layout_activity_main_viewpager.xml
@@ -33,6 +33,7 @@
         android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="50dp"
         android:layout_below="@+id/main_fragment_container"
         android:layout_gravity="center_horizontal"
         android:background="@color/colorPrimary">
