--- a/app/src/main/res/layout/layout_activity_epub.xml
+++ b/app/src/main/res/layout/layout_activity_epub.xml
@@ -10,6 +10,14 @@
         android:background="#0099cc"
         tools:context="com.projectclean.lwepubreader.activities.EPUBActivity">
 
+        <!--<org.xwalk.core.XWalkView
+            android:id="@+id/fullscreen_content"
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="#000000"
+            />-->
+
         <WebView
             android:id="@+id/fullscreen_content"
             android:layout_width="match_parent"
