--- a/app/src/main/res/layout/layout_configuration_activity.xml
+++ b/app/src/main/res/layout/layout_configuration_activity.xml
@@ -18,7 +18,7 @@
     </android.support.v7.widget.Toolbar>
 
     <TextView
-        android:text="Opciones de lectura"
+        android:text="@string/configuration_render_options"
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -29,7 +29,7 @@
         android:background="@android:color/darker_gray"/>
 
     <CheckedTextView
-        android:text="Mostrar reloj"
+        android:text="@string/configuration_show_clock"
         android:id="@+id/configuration_show_clock"
         android:layout_width="match_parent"
         android:textColor="@android:color/darker_gray"
@@ -46,7 +46,7 @@
         android:padding="15dp">
 
         <TextView
-            android:text="Color por defecto"
+            android:text="@string/configuration_color_mode"
             android:textSize="16dp"
             android:textColor="@android:color/darker_gray"
             android:textAlignment="gravity"
@@ -66,7 +66,7 @@
     </FrameLayout>
 
     <TextView
-        android:text="Opciones de traducción"
+        android:text="@string/configuration_translation_mode"
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -77,7 +77,7 @@
         android:background="@android:color/darker_gray"/>
 
     <TextView
-        android:text="Esta es la opción por defecto, puedes seleccionar opciones de traducción específica para cada libro dentro del menú \'Ver detalles\' de cada libro."
+        android:text="@string/configuration_translation_message"
         android:padding="10dp"
         android:textColor="@android:color/darker_gray"
         android:layout_width="match_parent"
@@ -89,7 +89,7 @@
         android:padding="15dp">
 
         <TextView
-            android:text="Traducción"
+            android:text="@string/translation"
             android:textSize="16dp"
             android:textColor="@android:color/darker_gray"
             android:textAlignment="gravity"
