--- a/app/src/main/res/layout/layout_about_us_activity.xml
+++ b/app/src/main/res/layout/layout_about_us_activity.xml
@@ -28,11 +28,20 @@
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"/>
 
+    <ImageView
+        android:src="@drawable/icon"
+        android:layout_margin="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal" />
+
     <TextView
         android:text="@string/about_us_line1"
         android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal" />
 
     <TextView
         android:text="@string/website"
