--- a/app/src/main/res/layout/item_file_chooser.xml
+++ b/app/src/main/res/layout/item_file_chooser.xml
@@ -6,8 +6,13 @@
     <CheckedTextView
         android:checkMark="?android:attr/listChoiceIndicatorMultiple"
         android:textColor="@android:color/black"
-        android:padding="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical" />
 
 </LinearLayout>
