--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,15 +15,30 @@
         <item name="popupMenuStyle">@style/PopupStyle</item>
         <item name="android:popupMenuStyle">@style/PopupStyle</item>
         <item name="android:alertDialogStyle">@style/AlertDialogCustom</item>
+        <item name="android:itemTextAppearance">@style/TextAppearance</item>
+        <item name="actionMenuTextColor">@android:color/white</item>
+        <item name="android:actionMenuTextColor">@android:color/white</item>
+        <item name="textAppearanceLargePopupMenu">@style/MyShareActionProviderStyle</item>
+        <item name="textAppearanceSmallPopupMenu">@style/MyShareActionProviderStyle</item>
+        <item name="listPopupWindowStyle">@style/PopupStyle</item>
+        <item name="android:itemBackground">@color/colorPrimary</item>
     </style>
 
-    <style name="PopupStyle" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="MyShareActionProviderStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Subtitle">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="PopupStyle" parent="Widget.AppCompat.PopupMenu">
         <item name="android:popupBackground">@color/colorPrimary</item>
     </style>
 
     <style name="ToolbarStyle" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:colorBackground">@color/colorPrimary</item>
         <item name="android:textColor">@color/skull_white</item>
+    </style>
+
+    <style name="TextAppearance">
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
     <style name="ActionMode" parent="@style/Widget.AppCompat.Light.ActionMode.Inverse">
@@ -41,6 +56,8 @@
 
     <style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/black_overlay</item>
+        <item name="actionMenuTextColor">@android:color/white</item>
+        <item name="android:actionMenuTextColor">@android:color/white</item>
     </style>
 
     <style name="AlertDialogCustom" parent="Theme.AppCompat.Light.Dialog.Alert">
